[package]
name = "kvs"
version = "1.0.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.5"
failure = "0.1.8"
serde = { "version" = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
slog = "2.7.0"
slog-term = "2.8.0"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.5"
predicates = "1.0.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "engine_perf"
harness = false
